# ow-analyzer

./: .gitignore  GitLogFormat.txt  README.md  data_schema_report.md  docker-compose.yml  package-lock.json
backend/: Dockerfile  NOTES.md  alembic.ini  log_normalizer.py  main.py  make_deck.py  nohup.out  nohup_backend.out  nohup_frontend.out  pyproject.toml  requirements.txt  requirements.txt.txt  scrim_data.json  scrim_data.json.phase5_backup
backend/alembic/: env.py
backend/analysis/: __init__.py  extract_lost_firstpick.py  first_fight.py  kiriko_ult.py
backend/data/: scrim.db  scrim.db.phase5_backup
backend/db/: database.py  models.py
backend/docs/: weekly_deck_prompt.md
backend/scrim_rowdata_log/: 2602192022_meta.json  2602202021_1.txt  2602202021_2.txt  2602202021_3.txt  2602202021_meta.json  2602202022_1.txt  2602202022_2.txt  2602202022_meta.json  2602202223_1.txt  2602202223_2.txt  2602202223_3.txt  2602202223_4.txt  2602202223_meta.json  2602210102_1.txt  2602210102_2.txt  2602210102_3.txt  2602210102_meta.json  2602210203_meta.json  2603022022_1_1.txt  2603022022_1_meta.json  2603022022_2.txt  2603022022_2_meta.json  2603022022_3.txt  2603022022_3_meta.json  2603022022_5.txt  2603022022_6.txt  2603022022_meta.json  2604222022_1.txt  2604222022_1_1.txt  2604222022_1_meta.json  2604222022_meta.json  2605261618_1.txt  2605261618_2.txt  2605261618_3.txt  2605261618_4.txt  2605261618_meta.json  2605271416_1.txt  2605271416_2.txt  2605271416_3.txt  2605271416_4.txt  (+265 more)
backend/scripts/: check_api_response.py  fix_map_name_typos.py  import_json_to_db.py  (+2 more)
(+51 files in other folders)
